syntax = "proto3";
package prodvana.application;
option go_package = "github.com/prodvana/prodvana-public/go/prodvana-sdk/proto/prodvana/application";
import "prodvana/capability/capability.proto";
import "prodvana/common_config/notification.proto";
import "prodvana/release_channel/release_channel_config.proto";
import "prodvana/workflow/integration_config.proto";
import "validate/validate.proto";

message ApplicationConfig {
    string name = 1 [
        (validate.rules).string = {
            min_len: 1,
            max_len: 63,
            pattern: '^[a-z]([a-z0-9-]*[a-z0-9]){0,1}$',
        }
    ];
    repeated prodvana.release_channel.ReleaseChannelConfig release_channels = 2;
    repeated prodvana.release_channel.ReleaseChannelGroupGeneratorConfig release_channel_groups = 11 [(validate.rules).repeated.items.message.required = true];
    prodvana.common_config.NotificationConfig notifications = 4;
    // deprecated
    prodvana.workflow.AlertingConfig alerts = 5;

    // deprecated
    repeated prodvana.capability.CapabilityConfig capabilities = 6 [(validate.rules).repeated.items.message.required = true];

    // deprecated
    repeated prodvana.capability.CapabilityInstanceConfig capability_instances = 7 [(validate.rules).repeated.items.message.required = true];

    reserved 3, 8, 9, 10;
    reserved "service_templates", "pipeline_templates", "use_dynamic_delivery", "enable_custom_tasks_dynamic_delivery";
    // next tag: 12
}
